# invenio-administration

./: .editorconfig  .eslintrc.yml  .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-js-linter.sh  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_administration/: __init__.py  admin.py  base.py  config.py  dashboard.py  decorators.py  errors.py  ext.py  generators.py  marshmallow_utils.py  menu.py  permissions.py  webpack.py
invenio_administration/assets/semantic-ui/js/invenio_administration/: package-lock.json  package.json  routes.js  theme.js
invenio_administration/assets/semantic-ui/js/invenio_administration/actions/: Actions.js  ActionsDropdown.js  Create.js  Delete.js  DeleteModal.js  DeleteModalTrigger.js  Edit.js
invenio_administration/assets/semantic-ui/js/invenio_administration/api/: actions.js  config.js  routes.js
invenio_administration/assets/semantic-ui/js/invenio_administration/components/: ErrorPage.js  index.js
invenio_administration/assets/semantic-ui/js/invenio_administration/create/: CreatePage.js  index.js
invenio_administration/assets/semantic-ui/js/invenio_administration/details/: ActionModal.js  AdminDetailsView.js  DetailsComponent.js  index.js
invenio_administration/assets/semantic-ui/translations/invenio_administration/: package-lock.json  package.json  translations.pot
invenio_administration/menu/: __init__.py  menu.py
invenio_administration/templates/semantic-ui/invenio_administration/: base.html  create.html  details.html  edit.html  header.html  header_login.html  index.html  macros.html  search.html  sidenav.html
invenio_administration/templates/semantic-ui/invenio_administration/header/: header.html  header_login.html  side_bar_toggle.html
invenio_administration/templates/semantic-ui/invenio_administration/sidebar/: sidenav.html
invenio_administration/templates/semantic-ui/invenio_theme/: header_login.html
invenio_administration/translations/: messages.pot
invenio_administration/translations/af/LC_MESSAGES/: messages.po
invenio_administration/translations/ar/LC_MESSAGES/: messages.po
invenio_administration/translations/bg/LC_MESSAGES/: messages.po
invenio_administration/translations/ca/LC_MESSAGES/: messages.po
invenio_administration/translations/cs/LC_MESSAGES/: messages.po
invenio_administration/translations/da/LC_MESSAGES/: messages.po
invenio_administration/translations/de/LC_MESSAGES/: messages.po
invenio_administration/translations/de_AT/LC_MESSAGES/: messages.po
invenio_administration/translations/de_DE/LC_MESSAGES/: messages.po
invenio_administration/translations/el/LC_MESSAGES/: messages.po
invenio_administration/translations/en_AT/LC_MESSAGES/: messages.po
invenio_administration/translations/en_HU/LC_MESSAGES/: messages.po
invenio_administration/translations/es/LC_MESSAGES/: messages.po
invenio_administration/translations/es_CU/LC_MESSAGES/: messages.po
invenio_administration/translations/es_MX/LC_MESSAGES/: messages.po
invenio_administration/translations/et/LC_MESSAGES/: messages.po
invenio_administration/translations/et_EE/LC_MESSAGES/: messages.po
invenio_administration/translations/fa/LC_MESSAGES/: messages.po
invenio_administration/translations/fa_IR/LC_MESSAGES/: messages.po
invenio_administration/translations/fr/LC_MESSAGES/: messages.po
invenio_administration/translations/fr_CI/LC_MESSAGES/: messages.po
invenio_administration/translations/fr_FR/LC_MESSAGES/: messages.po
invenio_administration/translations/gl/LC_MESSAGES/: messages.po
invenio_administration/translations/hi_IN/LC_MESSAGES/: messages.po
invenio_administration/translations/hr/LC_MESSAGES/: messages.po
invenio_administration/translations/hu/LC_MESSAGES/: messages.po
invenio_administration/translations/hu_HU/LC_MESSAGES/: messages.po
invenio_administration/translations/it/LC_MESSAGES/: messages.po
invenio_administration/translations/ja/LC_MESSAGES/: messages.po
invenio_administration/translations/ka/LC_MESSAGES/: messages.po
invenio_administration/translations/lt/LC_MESSAGES/: messages.po
invenio_administration/translations/ne/LC_MESSAGES/: messages.po
invenio_administration/translations/no/LC_MESSAGES/: messages.po
invenio_administration/translations/pl/LC_MESSAGES/: messages.po
invenio_administration/translations/pt/LC_MESSAGES/: messages.po
invenio_administration/translations/ro/LC_MESSAGES/: messages.po
invenio_administration/translations/ru/LC_MESSAGES/: messages.po
invenio_administration/translations/rw/LC_MESSAGES/: messages.po
invenio_administration/translations/sk/LC_MESSAGES/: messages.po
invenio_administration/translations/sv/LC_MESSAGES/: messages.po
invenio_administration/translations/sv_SE/LC_MESSAGES/: messages.po
invenio_administration/translations/tr/LC_MESSAGES/: messages.po
invenio_administration/translations/uk/LC_MESSAGES/: messages.po
invenio_administration/translations/uk_UA/LC_MESSAGES/: messages.po
invenio_administration/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_administration/translations/zh_TW/LC_MESSAGES/: messages.po
invenio_administration/views/: __init__.py  base.py  blueprint.py  dashboard.py
tests/: conftest.py  test_admin_menu.py  test_base.py  test_invenio_administration.py  test_marshmallow_utils.py
tests/mock_module/: config.py  ext.py  resource.py
tests/mock_module/administration/: __init__.py  mock.py
(+89 files in other folders)
