# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-administration
version = attr: invenio_administration.__version__
description = "Invenio module that adds administration panel to the system."
long_description = file: README.rst, CHANGES.rst
keywords = invenio admin administration backoffice
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-administration
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask-Menu>=0.5.0
    Flask-Principal>=0.4.0
    invenio-accounts>=2.0.0,<3.0.0
    invenio-base>=1.2.9,<2.0.0
    invenio-db[postgresql,mysql]>=1.0.9,<2.0.0
    invenio-vocabularies>=1.2.0,<2.0.0
    invenio-records-resources>=2.0.0,<3.0.0
    invenio-search-ui>=2.1.2,<3.0.0
    invenio-theme>=2.0.0,<3.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=2.1.0,<3.0.0
    sphinx>=4.5
    invenio-access>=1.0.0,<2.0.0
    invenio-app>=1.3.4,<2.0.0
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_administration = invenio_administration:InvenioAdministration
invenio_access.actions =
    administration_access_action = invenio_administration.permissions:administration_access_action
invenio_assets.webpack =
    invenio_administration = invenio_administration.webpack:theme
invenio_i18n.translations =
    messages = invenio_administration

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_administration/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_administration/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_administration/translations/messages.pot
output-dir = invenio_administration/translations/

[update_catalog]
input-file = invenio_administration/translations/messages.pot
output-dir = invenio_administration/translations/

[pydocstyle]
add_ignore = D401

[pycodestyle]
max-line-length = 88

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_administration --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_administration
